--- a/JVOS/JVOS.csproj
+++ b/JVOS/JVOS.csproj
@@ -13,10 +13,12 @@
 
   
   <ItemGroup>
+    <AvaloniaResource Remove="Assets\Style\BarTooltip.axaml" />
     <AvaloniaResource Remove="Assets\Style\Border.axaml" />
     <AvaloniaResource Remove="Assets\Style\CheckBox.axaml" />
     <AvaloniaResource Remove="Assets\Style\JButton.axaml" />
     <AvaloniaResource Remove="Assets\Style\ListBox.axaml" />
+    <AvaloniaResource Remove="Assets\Style\Menu.axaml" />
     <AvaloniaResource Remove="Assets\Style\RecommendMenuItem.axaml" />
     <AvaloniaResource Remove="Assets\Style\TextBlock.axaml" />
     <AvaloniaResource Remove="Assets\Style\TextBox.axaml" />
@@ -57,6 +59,10 @@
     <None Remove="Assets\Taskbar\exhubs.png" />
     <None Remove="Assets\Taskbar\search.png" />
     <None Remove="Assets\Taskbar\start.png" />
+    <None Remove="Assets\Wallpapers\jvos_dark.png" />
+    <None Remove="Assets\Wallpapers\zhaba-jvos.png" />
+    <None Remove="Assets\Wallpapers\zhaba-nikitoses.png" />
+    <None Remove="Assets\Wallpapers\zhaba-ulan.jpg" />
     <None Remove="Assets\warning.png" />
     <None Remove="Assets\wellcum.png" />
   </ItemGroup>
@@ -121,6 +127,9 @@
     <Compile Update="EmbededWindows\Preferences\Applications.axaml.cs">
       <DependentUpon>Applications.axaml</DependentUpon>
     </Compile>
+    <Compile Update="EmbededWindows\Preferences\Taskbar.axaml.cs">
+      <DependentUpon>Taskbar.axaml</DependentUpon>
+    </Compile>
     <Compile Update="EmbededWindows\Preferences\Desktop.axaml.cs">
       <DependentUpon>Desktop.axaml</DependentUpon>
     </Compile>
@@ -132,6 +141,9 @@
     </Compile>
     <Compile Update="EmbededWindows\Preferences\HubsAdd.axaml.cs">
       <DependentUpon>HubsAdd.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="EmbededWindows\TaskManager\TaskManager.axaml.cs">
+      <DependentUpon>TaskManager.axaml</DependentUpon>
     </Compile>
     <Compile Update="Hubs\VolumeHub.axaml.cs">
       <DependentUpon>VolumeHub.axaml</DependentUpon>
