--- a/JVOS/JVOS.csproj
+++ b/JVOS/JVOS.csproj
@@ -16,6 +16,7 @@
     <AvaloniaResource Remove="Assets\Style\BarTooltip.axaml" />
     <AvaloniaResource Remove="Assets\Style\Border.axaml" />
     <AvaloniaResource Remove="Assets\Style\CheckBox.axaml" />
+    <AvaloniaResource Remove="Assets\Style\ComboBox.axaml" />
     <AvaloniaResource Remove="Assets\Style\JButton.axaml" />
     <AvaloniaResource Remove="Assets\Style\ListBox.axaml" />
     <AvaloniaResource Remove="Assets\Style\Menu.axaml" />
