--- a/JVOS.Desktop/JVOS.Desktop.csproj
+++ b/JVOS.Desktop/JVOS.Desktop.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Avalonia.Desktop" Version="11.0.10" />
+    <PackageReference Include="Live.Avalonia" Version="1.4.1" />
   </ItemGroup>
 
   <ItemGroup>
