--- a/JVisionOS/JVisionOS.csproj
+++ b/JVisionOS/JVisionOS.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Godot.NET.Sdk/4.3.0-beta.2">
+<Project Sdk="Godot.NET.Sdk/4.2.2">
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <TargetFramework Condition=" '$(GodotTargetPlatform)' == 'android' ">net7.0</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Avalonia.Markup.Xaml.Loader" Version="11.0.10" />
-    <PackageReference Include="JLeb.Estragonia" Version="1.2.0-preview1" />
+    <PackageReference Include="JLeb.Estragonia" Version="1.1.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\JVOS\JVOS.csproj" />
